--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.nativescript.ngPoland",
+    "id": "org.nativescript.ngPolandConf",
     "tns-android": {
       "version": "4.2.0"
     },
@@ -8,7 +8,7 @@
       "version": "4.2.0"
     }
   },
-  "description": "NativeScript Application",
+  "description": "NativeScript app for ngPoland conference",
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "scripts": {
@@ -45,5 +45,6 @@
     "@angular/compiler-cli": "~6.1.0",
     "@ngtools/webpack": "~6.2.0"
   },
-  "readme": "NativeScript Application"
+  "readme": "NativeScript Application",
+  "author": "ngPoland"
 }
