event icons, bux fixes

--- a/App_Resources/Android/settings.json
+++ b/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"org.nativescript.ngPolandConf","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"pl.ngPoland.ngPolandConf","minSdkVersion":null,"targetSdkVersion":null}
