--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Thumbs.db
 /src/app/environments/environment.prod.ts
 /src/app/environments/environment.prod.js
 src/app/settings/environment.prod.js
+.cloud/*
