--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nativescript-angular": "~6.1.0",
     "nativescript-orientation": "^2.2.1",
     "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-sidedrawer": "~4.2.0",
+    "nativescript-ui-sidedrawer": "~4.0.0",
+    "nativescript-web-image-cache": "^4.2.6",
     "reflect-metadata": "~0.1.10",
     "rxjs": "~6.2.0",
     "tns-core-modules": "~4.2.0",
