--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,34 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/dist
-/tmp
-/out-tsc
-
-# dependencies
-/node_modules
-
 # NativeScript
-/hooks
-/platforms
+hooks/
+node_modules/
+platforms/
 
-# IDEs and editors
-/.idea
+# NativeScript Template
+*.js.map
+*.js
+!webpack.config.js
+*.css
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+.idea
+.cloud
 .project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+tmp/
+typings/
 
-# IDE - VSCode
+# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
-.DS_Store
-Thumbs.db
-
-
-# Sebek
-/src/environments/environment.ts
-/src/environments/environment.js
-/src/environments/environment.prod.ts
-/src/environments/environment.prod.js
-/src/app/settings/settings.ts
-/src/app/settings/settings.js
-/src/app/environments/environment.prod.ts
-/src/app/environments/environment.prod.js
-src/app/settings/environment.prod.js
-.cloud/*
