--- a/package.json
+++ b/package.json
@@ -1,52 +1,50 @@
 {
   "nativescript": {
     "id": "pl.ngPoland.ngPolandConf",
-    "tns-android": {
-      "version": "4.2.0"
-    },
     "tns-ios": {
-      "version": "4.2.0"
+      "version": "6.1.0"
+    },
+    "tns-android": {
+      "version": "6.1.2"
     }
   },
-  "description": "NativeScript app for the NG Poland and JS Poland conferences",
-  "license": "MIT",
-  "repository": "https://github.com/sebastiandenis/ngPolandConf",
+  "description": "NativeScript Application",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "repository": "<fill-your-repository-here>",
   "scripts": {
-    "lint": "tslint \"app/**/*.ts\""
+    "lint": "tslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@angular/animations": "~6.1.0",
-    "@angular/common": "~6.1.0",
-    "@angular/compiler": "~6.1.0",
-    "@angular/core": "~6.1.0",
-    "@angular/forms": "~6.1.0",
-    "@angular/http": "~6.1.0",
-    "@angular/platform-browser": "~6.1.0",
-    "@angular/platform-browser-dynamic": "~6.1.0",
-    "@angular/router": "~6.1.0",
-    "contentful": "^7.0.4",
-    "marked": "^0.5.1",
-    "nativescript-angular": "~6.1.0",
-    "nativescript-orientation": "^2.2.1",
-    "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-sidedrawer": "~4.0.0",
-    "nativescript-web-image-cache": "^4.2.6",
-    "reflect-metadata": "~0.1.10",
-    "rxjs": "~6.2.0",
-    "tns-core-modules": "~4.2.0",
-    "zone.js": "~0.8.18"
+    "@angular/animations": "~8.2.0",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
+    "@angular/forms": "~8.2.0",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
+    "@nstudio/nativescript-pulltorefresh": "^1.0.1",
+    "contentful": "^7.10.0",
+    "marked": "^0.7.0",
+    "nativescript-angular": "~8.2.0",
+    "nativescript-audio": "^5.0.5",
+    "nativescript-secure-storage": "^2.6.0",
+    "nativescript-theme-core": "~1.0.6",
+    "nativescript-ui-sidedrawer": "~7.0.0",
+    "reflect-metadata": "~0.1.12",
+    "rxjs": "^6.4.0",
+    "tns-core-modules": "~6.1.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@nativescript/schematics": "~0.2.5",
-    "codelyzer": "~4.3.0",
-    "nativescript-dev-sass": "~1.6.0",
-    "nativescript-dev-typescript": "~0.7.0",
-    "nativescript-dev-webpack": "~0.16.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.7.2",
-    "@angular/compiler-cli": "~6.1.0",
-    "@ngtools/webpack": "~6.2.0"
+    "@angular/compiler-cli": "~8.2.0",
+    "@ngtools/webpack": "~8.2.0",
+    "codelyzer": "~4.5.0",
+    "nativescript-dev-webpack": "~1.2.0",
+    "node-sass": "^4.7.1",
+    "tslint": "~5.19.0",
+    "typescript": "~3.5.3"
   },
-  "readme": "NativeScript Application",
-  "author": "Sebastian Denis"
+  "gitHead": "1964ea9e8ca1a0518e0d6370781eedcf6c23db42",
+  "readme": "NativeScript Application"
 }
