--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@nstudio/nativescript-pulltorefresh": "^1.0.1",
+    "@nstudio/nativescript-snackbar": "^1.1.1",
     "contentful": "^7.10.0",
     "marked": "^0.7.0",
     "nativescript-angular": "~8.2.0",
