--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,9 @@
   "main": "main.js",
   "android": {
     "v8Flags": "--expose_gc",
+    "requireModules": [
+      "nativescript-image"
+  ],
     "markingMode": "none"
   }
 }
