--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "android": {
     "markingMode": "none"
   },
-  "description": "NativeScript Application",
-  "license": "SEE LICENSE IN <your-license-filename>",
-  "repository": "<fill-your-repository-here>",
+  "description": "NativeScript app for the NG Poland and JS Poland conferences",
+  "license": "MIT",
+  "repository": "https://github.com/sebastiandenis/ngPolandConf",
   "scripts": {
     "lint": "tslint \"src/**/*.ts\""
   },
@@ -53,5 +53,6 @@
     "typescript": "~3.5.3"
   },
   "gitHead": "1964ea9e8ca1a0518e0d6370781eedcf6c23db42",
-  "readme": "NativeScript Application"
+  "readme": "NativeScript Application",
+  "author": "Sebastian Denis"
 }
